--- a/playoffs.html
+++ b/playoffs.html
@@ -4,6 +4,8 @@
 <head>
     <title>Torneio de Matrecos</title>
     <link rel="stylesheet" type="text/css" href="data/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data/img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -14,20 +16,24 @@
     <br> -->
     <div class="container">
         <div class="row d-none p-3" id="meias" style="font-size: 20px;">
-            <div class="col-lg-6 col-md-12 col-sm-12 mb-3 box">
-                <div id="meia-1"></div>
-                <div id="negra-1"></div>
+            <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+                <div class="box">
+                    <div id="meia-1"></div>
+                    <div id="negra-1"></div>
+                </div>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 mb-3 box">
-                <div id="meia-2"></div>
-                <div id="negra-2"></div>
+            <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+                <div class="box">
+                    <div id="meia-2"></div>
+                    <div id="negra-2"></div>
+                </div>
             </div>
             <div class="row" style="padding-top: 2%; font-size: larger; display: inline;">
                 <div style="justify-content: center; display: flex;">
-                    <button class="btn btn-success" type="button" style="margin: 2px 2px 2px 2px ;"
+                    <button class="btn btn-success" type="button"
                         onclick="event.preventDefault(); processResults()">Processar
                         Meias</button>
-                    <button class="btn btn-warning develop" type="button" style="margin: 2px 2px 2px 2px ;"
+                    <button class="btn btn-warning develop" type="button"
                         onclick="event.preventDefault(); gerarMeias()">Gerar
                         Resultados Aleatórios</button>
                 </div>
@@ -43,7 +49,7 @@
             </div>
         </div>
         <div style="display: flex; justify-content: center; margin-top: 5px;">
-            <button class="btn btn-light type=" style="margin: 2px 2px 2px 2px ;"
+            <button class="btn btn-light type="
                 onclick="window.location.href='games.html'">Voltar a
                 Jogos</button>
         </div>
