--- a/winner.html
+++ b/winner.html
@@ -4,6 +4,8 @@
 <head>
     <title>Torneio de Matrecos</title>
     <link rel="stylesheet" type="text/css" href="data/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="data/img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -18,16 +20,16 @@
 
 <body>
     <header>
-        <h1 style="text-align: center; margin-top: 25px;">VENCEDORES</h1>
+        <h1 style="text-align: center; margin-top: 25px; color: white;">VENCEDORES</h1>
     </header>
 
     <main>
-        <div class="container" style="background-color: white; margin-top: 25px;">
+        <div class="container" style="background-color: transparent; margin-top: 25px;">
             <div class="row">
-                <div class="col">
-                    <div style="text-align: center; font-size: 45px;" id="winner1"></div>
-                    <div id="winner1foto" style="display: flex; justify-content: center;">
-                        <img id="winner1img" alt="Vencedor 1" style="max-width: 100%; object-fit: contain;">
+                <div class="col mt-4">
+                    <div style="text-align: center; font-size: 45px; color: white;" id="winner1"></div>
+                    <div id="winner1foto" style="display: flex; justify-content: center; padding: 25px;">
+                        <img id="winner1img" alt="Vencedor 1" style="max-width: 100%; object-fit: contain; border-radius: 50px;">
                     </div>
                 </div>
                 <div class="col">
@@ -35,16 +37,15 @@
                         <img src="data/img/trophy.png" style="height: 500px; width: fit-content;">
                     </div>
                 </div>
-                <div class="col">
-                    <div style="text-align: center; font-size: 45px;" id="winner2"></div>
-                    <div id="winner2foto" style="display: flex; justify-content: center;">
-                        <img id="winner2img" alt="Vencedor 2" style="max-width: 100%; object-fit: contain;">
+                <div class="col mt-4">
+                    <div style="text-align: center; font-size: 45px; color: white;" id="winner2"></div>
+                    <div id="winner2foto" style="display: flex; justify-content: center; padding: 25px;">
+                        <img id="winner2img" alt="Vencedor 2" style="max-width: 100%; object-fit: contain; border-radius: 50px;">
                     </div>
                 </div>
             </div>
         </div>
-                <div class="container" style="margin-top: 25px;">
-
+        <div class="container" style="margin-top: 25px;">
             <div class="row">
                 <button type="submit" class="btn btn-dark" onclick="reset()">Recomeçar Torneio</button>
             </div>
