--- a/playoffs.html
+++ b/playoffs.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div class="row " id="final" style="padding-top: 2%;">
+        <div class="row p-3" id="final" style="display: flex; justify-content: center;  align-items: center;">
         </div>
         <div class="row" style="padding-top: 2%; font-size: larger; display: inline;">
             <div style="justify-content: center; display: flex;">
