--- a/games.html
+++ b/games.html
@@ -31,8 +31,7 @@
             <div class="col-lg-4 col-md-12 col-sm-12" style="margin-left: 0%;">
                 <div style="margin: 5% auto; width: fit-content;">
                     <button class="btn btn-success" type="button"
-                        onclick="event.preventDefault(); processResults()">Processar
-                        Resultados</button>
+                        onclick="event.preventDefault(); processResults()">Process Results</button>
                 </div>
                 <div style="margin: 5% auto; width: fit-content;">
                     <button class="btn btn-warning develop" type="button"
@@ -40,22 +39,20 @@
                         Aleatórios</button>
                 </div>
                 <div style="margin: 5% auto; width: fit-content;">
-                    <button class="btn btn-danger" type="button" onclick="event.preventDefault(); cleanResults()">Limpar
-                        Resultados</button>
+                    <button class="btn btn-danger" type="button" onclick="event.preventDefault(); cleanResults()">Clean Results</button>
                 </div>
                 <div style="margin: 5% auto; width: fit-content;">
-                    <button class="btn btn-light" type="button" onclick="window.location.href='teams.html'">Voltar a
-                        Equipas</button>
+                    <button class="btn btn-light" type="button" onclick="window.location.href='teams.html'">Back to Teams</button>
                     <div id="list-teams"></div>
                 </div>
                 <div id="table" style="margin-left: 10%;"></div>
                 <div style="margin: 5% auto; width: fit-content;">
                     <button id="playoffs" class="btn btn-success d-none" type="button"
-                        onclick="window.location.href='playoffs.html'">Avançar para os Play-Offs</button>
+                        onclick="window.location.href='playoffs.html'">Advance to Play-Offs</button>
                 </div>
                 <div style="margin: 5% auto; width: fit-content;">
                     <button id="winner" class="btn btn-dark d-none" type="button"
-                        onclick="event.preventDefault(); findWinner()">Encontrar Vencedor</button>
+                        onclick="event.preventDefault(); findWinner()">Find Winner</button>
                 </div>
 
             </div>
