--- a/index.html
+++ b/index.html
@@ -22,32 +22,33 @@
         <div class="m-5 d-flex justify-content-center align-items-center">
             <div class="container p-2" style="background-color: white; border-radius: 2vh;">
                 <div class="row">
-                    <h1 style="text-align: center;">TORNEIO DE MATRECOS</h1>
+                    <h1 style="text-align: center;">FOOSBALL TOURNAMENT</h1>
                 </div>
                 <div class="row">
                     <div class="container" style="font-size: 20px;">
                         <ol>
-                            <li>Cada equipa é composta por 2 jogadores</li>
-                            <li>As equipas jogam todas umas contra as outras 1 vez e é formada uma tabela classificativa
-                                de
-                                acordo com o nº vitórias</li>
-                            <li>Em caso de empate, os critérios de desempate são: 'Diferença de Golos' e 'Golos
-                                Marcados'
+                            <li>Each team is composed of 2 players</li>
+                            <li>There are 2 possible formats:
+                                <ul>
+                                    <li>All teams play against each other once, and a ranking table is formed based on
+                                        the number of victories. At the end of the games, the players decide if they want to determine the champion
+                                        according to the ranking table or through playoffs</li>
+                                    <li>Teams are divided into groups, and 2 teams from each group qualify for the final
+                                        phase</li>
+                                </ul>
                             </li>
-                            <li>Os jogos têm duração a definir pelos jogadores</li>
-                            <li>No final dos jogos, os jogadores decidem se querem determinar o campeão de acordo com a
-                                tabela ou decidi-lo através de play-offs</li>
-                            <li>Os play-offs são constituídos por meias-finais e final</li>
-                            <li>Eventualmente, pode não haver meias-finais (uma vez que depende do nºequipas
-                                participantes)
-                            </li>
-                            <li>As meias-finais são à melhor de 3, enquanto que a final é a jogo único</li>
+                            <li>In case of a tie, the tiebreakers are: 'Goal Difference' and 'Goals Scored'</li>
+                            <li>The duration of the games is to be determined by the players</li>
+                            <li>The playoffs consist of semi-finals and a final</li>
+                            <li>There may not be semi-finals, depending on the number of participating teams</li>
+                            <li>The semi-finals are best of 3, while the final is a single game</li>
                         </ol>
                     </div>
+
                 </div>
                 <div class="row" style="padding-bottom: 10px;">
                     <div style="display: flex; justify-content: center;">
-                        <a class="btn btn-dark" href="teams.html">Começar</a>
+                        <a class="btn btn-dark" href="teams.html">Start</a>
                     </div>
                 </div>
             </div>
