--- a/playoffs.html
+++ b/playoffs.html
@@ -44,14 +44,12 @@
         <div class="row" style="padding-top: 2%; font-size: larger; display: inline;">
             <div style="justify-content: center; display: flex;">
                 <button class="btn btn-dark d-none" id="winner" type="button"
-                    onclick="event.preventDefault(); findWinner()">Encontrar
-                    Vencedor</button>
+                    onclick="event.preventDefault(); findWinner()">Find Winner</button>
             </div>
         </div>
         <div style="display: flex; justify-content: center; margin-top: 5px;">
             <button class="btn btn-light type="
-                onclick="window.location.href='games.html'">Voltar a
-                Jogos</button>
+                onclick="window.location.href='games.html'">Back to Games</button>
         </div>
 
 
