--- a/winner.html
+++ b/winner.html
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <h1 style="text-align: center; margin-top: 25px; color: white;">VENCEDORES</h1>
+        <h1 style="text-align: center; margin-top: 25px; color: white;">WINNERS</h1>
     </header>
 
     <main>
@@ -47,7 +47,7 @@
         </div>
         <div class="container" style="margin-top: 25px;">
             <div class="row">
-                <button type="submit" class="btn btn-dark" onclick="reset()">Recomeçar Torneio</button>
+                <button type="submit" class="btn btn-dark" onclick="reset()">Restart Tournament</button>
             </div>
         </div>
 
