--- a/games.html
+++ b/games.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Torneio de Matrecos</title>
+    <title>Foosball Tournament</title>
     <link rel="stylesheet" type="text/css" href="data/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +43,6 @@
                 </div>
                 <div style="margin: 5% auto; width: fit-content;">
                     <button class="btn btn-light" type="button" onclick="window.location.href='teams.html'">Back to Teams</button>
-                    <div id="list-teams"></div>
                 </div>
                 <div id="table" style="margin-left: 10%;"></div>
                 <div style="margin: 5% auto; width: fit-content;">
