--- a/winner.html
+++ b/winner.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Torneio de Matrecos</title>
+    <title>Foosball Tournament</title>
     <link rel="stylesheet" type="text/css" href="data/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
