--- a/teams.html
+++ b/teams.html
@@ -9,6 +9,8 @@
     <link rel="icon" href="data/img/logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
 </head>
 
 <body>
@@ -16,7 +18,7 @@
     <br> -->
     <div class="container">
         <div class="row">
-            <div class="col-4 box" style="margin: 5% auto; width: fit-content;">
+            <div class="col-6 box" style="margin: 5% auto; width: fit-content;">
                 <div class="container">
                     <h5 style="text-align: center; padding-bottom: 5px;">Nova Equipa</h5>
                     <form id="new-team">
@@ -30,24 +32,12 @@
                     </form>
                 </div>
             </div>
-            <div class="col-4 box" style="margin: 5% auto; width: fit-content;">
+            <div class="col-6 box" style="margin: 5% auto; width: fit-content;">
                 <div class="container">
                     <h5 style="text-align: center; padding-bottom: 5px;">Registered Teams</h5>
                     <div id="list-teams"></div>
                 </div>
             </div>
-                <div class="col-4 box" style="margin: 5% auto; width: fit-content;">
-                <div class="container">
-                    <h5 style="text-align: center; padding-bottom: 5px;">Remove Team</h5>
-                    <form id="remove-team">
-                        <input type="text" id="teamID" name="teamID" placeholder="Team Letter">
-                        <br><br>
-                        <button class="btn btn-outline-danger addButtom" type="submit"
-                            onclick="event.preventDefault(); deleteTeam(teamID.value)">Remove</button>
-                    </form>
-                </div>
-            </div>
-
         </div>
 
 
