create league format

--- a/playoffs.html
+++ b/playoffs.html
@@ -49,7 +49,7 @@
         </div>
         <div style="display: flex; justify-content: center; margin-top: 5px;">
             <button class="btn btn-light type="
-                onclick="window.location.href='games.html'">Back to Games</button>
+                onclick="window.location.href='league.html'">Back to Games</button>
         </div>
 
 
