--- a/teams.html
+++ b/teams.html
@@ -20,7 +20,7 @@
         <div class="row">
             <div class="col-6 box" style="margin: 5% auto; width: fit-content;">
                 <div class="container">
-                    <h5 style="text-align: center; padding-bottom: 5px;">Nova Equipa</h5>
+                    <h5 style="text-align: center; padding-bottom: 5px;">New Team</h5>
                     <form id="new-team">
                         <input type="text" id="player1" name="player1" placeholder="Player 1">
                         <br>
@@ -42,10 +42,13 @@
 
 
         <div style="margin:auto; width: fit-content;">
-            <button type="submit" class="btn btn-danger" onclick="event.preventDefault(); resetEquipas()">Reset Teams </button>
-            <button type="button" class="btn btn-success" onclick="window.location.href='games.html'">Advance to Games</button>
+            <button type="submit" class="btn btn-danger" onclick="event.preventDefault(); resetEquipas()">Reset Teams
+            </button>
+            <button type="button" class="btn btn-success" onclick="window.location.href='formats.html'">Advance to
+                Games</button>
             <button type="button" class="btn btn-light" onclick="window.location.href='index.html'">Go Back</button>
-            <button type="submit" class="btn btn-warning develop" onclick="event.preventDefault(); gerarEquipas()">Gerar Equipas Aleatórias</button>
+            <button type="submit" class="btn btn-warning develop" onclick="event.preventDefault(); gerarEquipas()">Gerar
+                Equipas Aleatórias</button>
         </div>
 
     </div>
