--- a/formats.html
+++ b/formats.html
@@ -21,42 +21,46 @@
             <div class="col-12">
                 <h1 style="text-align: center; margin-top: 25px; color: white;">Choose the tournament format</h1>
             </div>
-        <div class="row">
-            <div class="col-12 col-lg-6 p-4" style="cursor: pointer;" onclick="chooseFormat('league')">
-                <div class="box">
-                    <h1>League</h1>
-                    <h5>All the players play each other and the player with the most wins is the winner
-                    </h5>
+            <div class="row">
+                <div class="col-12 col-lg-6 p-4" style="cursor: pointer;" onclick="chooseFormat('league')">
+                    <div class="box">
+                        <h1>League</h1>
+                        <h5>All the players play each other and the player with the most wins is the winner
+                        </h5>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 p-4" style="cursor: pointer;" onclick="chooseFormat('groups')">
+                    <div class="box">
+                        <h1>Groups and Knockouts</h1>
+                        <h5>Players are divided into groups and the best ones advance to the knockouts</h5>
+                    </div>
                 </div>
             </div>
-            <div class="col-12 col-lg-6 p-4" style="cursor: pointer;" onclick="chooseFormat('groups')">
-                <div class="box">
-                    <h1>Groups and Knockouts</h1>
-                    <h5>Players are divided into groups and the best ones advance to the knockouts</h5>
-                </div>
+
+
+            <div style="margin:auto; width: fit-content;">
+                <button type="button" class="btn btn-light" onclick="window.location.href='teams.html'">Go Back</button>
             </div>
+
         </div>
 
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+            crossorigin="anonymous"></script>
 
-        <div style="margin:auto; width: fit-content;">
-            <button type="button" class="btn btn-light" onclick="window.location.href='teams.html'">Go Back</button>
-        </div>
+        <script>
+            let data = JSON.parse(localStorage.getItem('foosball'));
+            let newdata = {};
+            newdata.players = data.players
+            newdata.teams = data.teams
+            newdata.results = []
 
-    </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-        crossorigin="anonymous"></script>
-
-    <script>
-        let data = JSON.parse(localStorage.getItem('foosball'));
-
-        function chooseFormat(format) {
-            data.format = format;
-            localStorage.setItem('foosball', JSON.stringify(data));
-            window.location.href = format + '.html';
-        }
-    </script>
+            function chooseFormat(format) {
+                newdata.format = format;
+                localStorage.setItem('foosball', JSON.stringify(newdata));
+                window.location.href = format + '.html';
+            }
+        </script>
 </body>
 
 </html>
