--- a/formats.html
+++ b/formats.html
@@ -39,7 +39,7 @@
 
 
             <div style="margin:auto; width: fit-content;">
-                <button type="button" class="btn btn-light" onclick="window.location.href='teams.html'">Go Back</button>
+                <button type="button" class="btn btn-light" onclick="window.location.href='teams.html'">Back To Teams</button>
             </div>
 
         </div>
