--- a/league.html
+++ b/league.html
@@ -42,7 +42,7 @@
                     <button class="btn btn-danger" type="button" onclick="event.preventDefault(); cleanResults()">Clean Results</button>
                 </div>
                 <div style="margin: 5% auto; width: fit-content;">
-                    <button class="btn btn-light" type="button" onclick="window.location.href='teams.html'">Back to Teams</button>
+                    <button class="btn btn-light" type="button" onclick="window.location.href='formats.html'">Go Back</button>
                 </div>
                 <div id="table" style="margin-left: 10%;"></div>
                 <div style="margin: 5% auto; width: fit-content;">
