--- a/groups.html
+++ b/groups.html
@@ -40,8 +40,7 @@
                 <div style="margin: 5% auto; width: fit-content;">
                     <button class="btn btn-light" type="button" onclick="window.location.href='formats.html'">Go Back</button>
                 </div>
-                <div id="tableA" style="margin-left: 10%;"></div>
-                <div id="tableB" style="margin-left: 10%;"></div>
+                <div id="tables" style="margin-left: 10%;"></div>
                 <div style="margin: 5% auto; width: fit-content;">
                     <button id="playoffs" class="btn btn-success d-none" type="button"
                         onclick="window.location.href='playoffs.html'">Advance to Play-Offs</button>
